// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentAnswers /> should render correctly 1`] = `
<ContainerConstructor
  comment={
    Object {
      "$refType": null,
      "answers": Object {
        "edges": Array [
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "1",
            },
          },
          Object {
            "node": Object {
              "$fragmentRefs": null,
              "id": "2",
            },
          },
        ],
        "totalCount": 2,
      },
      "id": "proposalComment1",
    }
  }
  componentRef={null}
/>
`;

exports[`<CommentAnswers /> should render correctly with no answers 1`] = `
<ContainerConstructor
  comment={
    Object {
      "$refType": null,
      "answers": Object {
        "edges": Array [],
        "totalCount": 0,
      },
      "id": "proposalComment2",
    }
  }
  componentRef={null}
/>
`;
